@@ -18,6 +18,8 @@ Version 1.11.10+dev:
    * Units can no longer be moved in linger mode (bug #21450).
    * Labels are now removed when shroud/fog is removed, rather than waiting
      for a new turn (bug #21434).
+   * Percent signs show when describing traits that increase damage or attacks
+     by a percentage (bug #21577).
 
 
 Version 1.11.10:
