@@ -17,6 +17,8 @@ Version 1.11.10+dev:
    * Changed: Updated valgrind suppression file.
    * Labels are now removed when shroud/fog is removed, rather than waiting
      for a new turn (bug #21434).
+   * Percent signs show when describing traits that increase damage or attacks
+     by a percentage (bug #21577).
 
 Version 1.11.10:
  * Add-ons client:
